# RubiksCube

./: CMakeLists.txt  Cubie.c  Cubie.h  TwoByTwo.c  TwoByTwo.h  cube  main.c  main.cpp  test.c
info/: thoughts.txt
src/: Cubie.h  RubiksCube.c  RubiksCube.h  RubiksCubeInternal.h  TwoByTwo.c  TwoByTwo.h  main.c  solver.c  solver.h
test/: test.c  testCubies.c  testCubies.h
